Messing with unity test tools

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ UnityGenerated/
 Library/
 Assets/AssetStoreTools*
 Assets/UnityTestTools
+UnityTestTools.meta
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
