changed gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ Obj/
 UnityGenerated/
 Library/
 Assets/AssetStoreTools*
+Assets/UnityTestTools
+UnityTestTools.meta
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
